feat(parity): F19 — Tier A' ships: the bc23 scenario twin, bit-exact on all six pairs
The review's largest gap between the note and the tree.
`tools/ci/parity_tiers_bc23.py` said "Tier A' (NOT SHIPPED IN THIS LANDING)"
and the job ran `--bots examplefuncsplayer23` alone, so the anchor and island
subsystem, the elixir tree, the tempo fields, the comms paths and CONQUEST
were compared against the Java engine by nothing — Tier A's bot reaches none
of them. design.md:2147-2182, 2211 and 2228 make Tier A' part of the phase-30
gate.

WHAT SHIPS. `tools/oracle/bc23/bc23scenario/RobotPlayer.java`, the Java twin
of `src/battlecode/years/bc23/chassis/scenario23.nim`, written line for line
against it. The job now runs TWELVE pairs (two bots x six maps) over whole
2000-round games and every one is BIT-EXACT with an empty ledger. Measured in
the sandbox against the pinned jar (sha256 5d4e42a5..., Temurin 8):

  examplefuncsplayer23  Quiet/SmallElements/Lantern/Spin/Sneaky/Barcode
                        bit-exact, peak bytecode 5-7 %
  bc23scenario          the same six, bit-exact, peak bytecode 28-43 %
                        (the carrier's 12 500 is the binding limit; the job's
                        headroom bound is 50 %)

THE NIM HALF HAD TO BE REWRITTEN, and this is the substance of the change.
As committed, `scenario23.nim` asked the World questions a sandboxed Java
robot cannot ask: `w.islands[0].tiles[0]`, `w.anchorsInStock(team)`,
`w.headquarters[team]`, a walk over `w.wellAt`. There is no `RobotController`
call for any of them, so no Java twin of that file could exist and the tier
was uncomparable rather than merely unequal. Every query is robot-local now,
and both halves go through the same primitive:
`RobotControllerImpl.getAllLocationsWithinRadiusSquared` — radius clamped to
the type's vision radius, the engine's x-outer/y-inner scan order,
`canSenseLocation` (hence the cloud collapse) applied to every tile. That is
`visible()` in the Nim and `visible()` in the Ja